css/main.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  background-color: #FFF;
  font: 13.34px Helvetica, Arial, sans-serif;
  font-size: small;
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  margin: 1em 0;
}

h1 { font-size: 2em; }
h2 { font-size: 1.5em; }
h3 { font-size: 1.17em; }
h5 { font-size: .83em; }
h6 { font-size: .75em; }

h1 { margin-bottom: 1em; }
p { margin: 1em 0; }

a         { color: #00a; }
a:hover   { color: #000; }
a:visited { color: #a0a; }

/*****************************************************************************/
/*
/* Shared Global Styles
/*
/*****************************************************************************/
.text-center {
  text-align: center;
}
img.img-center {
  margin-left: auto;
  margin-right: auto;
  display: block;
}

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/
.intro p {
  margin: 0;
}
.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

.posts li {
  line-height: 1.75em;
}

.posts span {
  color: #aaa;
  font-family: Monaco, "Courier New", monospace;
  font-size: 80%;
}

/*****************************************************************************/
/*
/* About
/*
/*****************************************************************************/

/*****************************************************************************/
/*
/* Items
/*
/*****************************************************************************/
#sell>h2 {
  margin: 25px 0;
}
.sp-item {
  font-size: 13px;
  color: #262236;
  background-color: white;
  margin: 40px 0 10px 0;
}
.sp-item-title {
  margin: 0 0 5px 0;
}
.sp-item-imgs-grp {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}
.sp-item-label-row {
  margin-bottom: 10px;
}
.sp-item-label-price {
  background-color: #444 !important;
}
.sp-item-label-new {
  background-color: #A5B0C3 !important;
}
.sp-item-label-date {
  color: #A5B0C3;
}
.sp-item-imgs-grp img {
  float: left;
  width: 50%;
}
.sp-item-seperator {
  background-color: #eee;
  height: 1px;
}
/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  font-size: 115%;
  text-align: justify;
  width: 90%;
  max-width: 600px;
  margin: 3em auto 2em;
  line-height: 1.5em;
}

.header h1 {
  font-size: 25px;
}

.header img {
  vertical-align: bottom;
}

.header a, .header a:hover {
  font-weight: bold;
  text-decoration: none;
}

.avatar {
  width: 35px;
  height: auto;
}

.title {
  display: inline-block;
}

.title a {
  color: #a00;
}

.title a:hover {
  color: #000;
}

.header a.extra {
  color: #aaa;
  margin-left: 1em;
}

.header a.extra:hover {
  color: #000;
}

.meta {
  color: #aaa;
}

.footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #eee;
  margin-top: 6em;
  overflow: hidden;
}

.footer .contact {
  float: left;
  margin-right: 3em;
}

.footer .contact a {
  color: #8085C1;
}

.footer .rss {
  margin-top: 1.1em;
  margin-right: -.2em;
  float: right;
}

.footer .rss img {
  border: 0;
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

/* standard */
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .2em;
}

.post pre code {
  border: none;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

